--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "fs-extra": "^8.1.0",
     "jest": "^24.8.0",
-    "jsdoc": "^3.6.3"
+    "jsdoc": "^3.6.3",
+    "mock-fs": "^4.10.1"
   }
 }
